fix: padding overflowing size

--- a/src/app/_components/header/header.css
+++ b/src/app/_components/header/header.css
@@ -1,10 +1,10 @@
 .pokeHeader {
     background-color: rgb(48, 42, 38);
     overflow: hidden;
-    padding: 10px;
-    width: 100%;
-    height: 100%;
-
+    padding: 1%;
+    width: 98%;
+    height: 98%;
+    border-bottom: 3px solid rgb(19, 14, 10);
 }
 
 .logoImg {
